# Response_Lorenz_Koopman

./: .gitignore  .pre-commit-config.yaml  Correlation_Functions.ipynb  LinearResponseExperiments.py  Plotting.ipynb  README.md  Try.ipynb  perform_edmd.py  pyproject.toml
.github/workflows/: ci.yml
LorenzEDMD/: config.py
LorenzEDMD/EDMD/: EDMD.py
LorenzEDMD/dynamical_system/: Lorenz.py
LorenzEDMD/utils/: data_processing.py  load_config.py
notebooks/: Correlation_Functions.ipynb  Different_Reconstructions.ipynb  Plotting.ipynb  new.ipynb
scripts/: LinearResponseExperiments.py  perform_edmd.py  run_edmd.sh
src/LorenzEDMD/: config.py
src/LorenzEDMD/EDMD/: EDMD.py
src/LorenzEDMD/dynamical_system/: Lorenz.py
src/LorenzEDMD/utils/: data_processing.py  load_config.py  paths.py
