[tool.poetry]
name = "LorenzEDMD"
version = "0.1.0"
description = ""
authors = ["Niccolo Zagli <niccozagli@gmail.com>"]
readme = "README.md"
packages = [{ include = "LorenzEDMD", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = ">=2.2.5,<3.0.0"
scipy = ">=1.15.3,<2.0.0"
matplotlib = ">=3.10.3,<4.0.0"
tqdm = ">=4.67.1,<5.0.0"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
plotly = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
mypy = "*"
pre-commit = "*"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
strict_optional = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
